deleted useless keywords and fixed background contrast

--- a/style.css
+++ b/style.css
@@ -753,7 +753,8 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+     background-color: #39333C;
+    /* rgba(165, 147, 99, 0.7);  */
     padding: 40px 40px 40px 40px;
 }
 
